@@ -1,5 +1,6 @@
 Revision history for Coverage::Server
 
+          - Moving Role::Template to own distribution
           - Idiomatic rename of Functions to Util
 
 0.3.1     2015-09-01 09:38:19
